# lindas-hydro-scraper

./: .coverage  .env.example  .gitignore  CLAUDE.md  GCP_DEPLOYMENT_GUIDE.md  README.md  hello.py  main.py  pyproject.toml
.claude/: settings.local.json
.claude/commands/: create-pr.md  fix-issue.md  merge-pr.md
.github/: copilot-instructions.md
src/lindas_hydro_scraper/: __init__.py  main.py
src/lindas_hydro_scraper/core/: __init__.py  config.py  constants.py  data_processor.py  query_builder.py  sparql_client.py
src/lindas_hydro_scraper/models/: __init__.py  measurement.py  query.py  station.py
src/lindas_hydro_scraper/scrapers/: __init__.py  lindas_scraper.py
src/lindas_hydro_scraper/utils/: __init__.py  csv_handler.py  logging.py  site_list_helper.py
tests/: conftest.py  test_data_processor.py  test_measurement.py  test_sparql_client.py
